// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logging finalMessage should render a yarn setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Setup:
$ cd undefined/
$ yarn

Development:
$ cd undefined/
$ yarn start

Build Command:
$ cd undefined/
$ yarn build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`logging finalMessage should render an instruction message skipping the setup step 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Development:
$ cd undefined/
$ npm start

Build Command:
$ cd undefined/
$ npm run build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`logging finalMessage should render an npm setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Setup:
$ cd undefined/
$ npm install

Development:
$ cd undefined/
$ npm start

Build Command:
$ cd undefined/
$ npm run build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;
